<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dialog_bg_99"

    >
    <RelativeLayout
        android:layout_width="315dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="195dp"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/dialog_bg_white"
        >
        <TextView
            android:id="@+id/customer_phone_num"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="70dp"
            android:textColor="@color/black_text_max"
            android:text="@string/_010_5289614"
            android:textStyle="bold"
            android:textSize="@dimen/text_size_18"
            />
        <TextView
            android:id="@+id/customer_work_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="13dp"
            android:textColor="@color/black_text_0.6"
            android:text="@string/customer_work_time"
            android:layout_below="@+id/customer_phone_num"
            android:textStyle="bold"
            android:textSize="@dimen/text_size_13"
            />
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/customer_work_time"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="25dp"
            android:layout_marginBottom="25dp"
            >
            <Button
                android:id="@+id/cancle_bt"
                android:layout_width="130dp"
                android:layout_height="45dp"
                android:text="取消"
                android:background="@drawable/cus_service_cancle_bg"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textSize="@dimen/text_size_15"
                />
            <Button
                android:id="@+id/call_bt"
                android:layout_width="130dp"
                android:layout_height="45dp"
                android:text="@string/call"
                android:layout_toRightOf="@+id/cancle_bt"
                android:layout_marginLeft="15dp"
                android:background="@drawable/common_peack_2_bg"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textSize="@dimen/text_size_15"
                />
        </RelativeLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/customer_service_phone"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="30dp"
                android:textColor="@color/black_text_max"
                android:textSize="@dimen/text_size_20"
                android:textStyle="bold"
                />
    </RelativeLayout>

</FrameLayout>