<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:background="@color/white_lighter_bg"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:background="@color/white"
        android:layout_height="@dimen/y132">
        <TextView
            android:id="@+id/setting_back_btn"
            android:text="@string/change_password"
            android:textColor="@color/black_text_max"
            android:drawableLeft="@drawable/return_icon"
            android:textSize="@dimen/text_size_15"
            android:drawablePadding="@dimen/x30"
            android:layout_marginLeft="@dimen/x40"
            android:layout_marginTop="@dimen/y47"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <!--<LinearLayout-->
    <!--android:padding="@dimen/y10"-->
    <!--android:layout_marginTop="@dimen/y5"-->
    <!--android:background="@color/light_gray2"-->
    <!--android:orientation="vertical"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="wrap_content">-->
    <LinearLayout
        android:background="@color/white"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/y20"
        android:layout_width="match_parent"
        android:layout_height="@dimen/y100">

        <TextView

            android:layout_marginLeft="@dimen/x40"
            android:textColor="@color/black_text_max"
            android:text="@string/old_password"
            android:textSize="@dimen/text_size_14"
            android:textStyle="bold"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <com.will.weiyue.widget.DeletableEditText
            android:id="@+id/setting_login_old_password_et"
            android:layout_width="match_parent"
            android:layout_height="@dimen/y48"
            android:layout_below="@+id/login_user_name_tv"
            android:maxLines="1"
            android:inputType="textPassword"
            android:hint="填写原密码"
            android:layout_marginLeft="@dimen/x50"
            android:layout_marginRight="@dimen/x40"
            android:textSize="@dimen/text_size_15"
            android:textColorHint="@color/black_text_0.4"
            android:drawableRight="@drawable/edit_delete"
            android:singleLine="true"
            android:focusable="true"
            android:background="@null"
            />
    </LinearLayout>
    <LinearLayout
        android:background="@color/white"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="@dimen/y100">

        <TextView

            android:layout_marginLeft="@dimen/x40"
            android:textColor="@color/black_text_max"
            android:text="@string/new_password"
            android:textSize="@dimen/text_size_14"
            android:textStyle="bold"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <!--<EditText-->
        <!--android:id="@+id/setting_login_new_password_et"-->
        <!--android:inputType="textPassword"-->
        <!--android:hint="填写新密码"-->
        <!--android:textSize="@dimen/text_size_20"-->
        <!--android:layout_marginLeft="@dimen/x15"-->

        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content" />-->
        <com.will.weiyue.widget.DeletableEditText
            android:id="@+id/setting_login_new_password_et"
            android:layout_width="match_parent"
            android:layout_height="@dimen/y48"
            android:layout_below="@+id/login_user_name_tv"
            android:maxLines="1"
            android:inputType="textPassword"
            android:hint="填写新密码"
            android:layout_marginLeft="@dimen/x50"
            android:layout_marginRight="@dimen/x40"
            android:textSize="@dimen/text_size_15"
            android:textColorHint="@color/black_text_0.4"
            android:drawableRight="@drawable/edit_delete"
            android:singleLine="true"
            android:focusable="true"
            android:background="@null"
            />
    </LinearLayout>

    <!--</LinearLayout>-->
    <Button
        android:id="@+id/setting_login_password_next_btn"
        android:text="@string/sure_to_modify"
        android:layout_marginTop="@dimen/y88"
        android:textSize="@dimen/text_size_15"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:background="@drawable/common_peack_2_bg"
        android:layout_width="@dimen/x670"
        android:layout_height="@dimen/y90" />
</LinearLayout>
